--- a/src/Leagueoflegends.Support/Themes/Units/RiotStageListBoxItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotStageListBoxItem.xaml
@@ -4,15 +4,15 @@
   xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
   <LinearGradientBrush x:Key="ImageBorderBrush" StartPoint="0.5,0" EndPoint="0.5,1">
-    <GradientStop Color="#D9838F" Offset="0"/>
-    <GradientStop Color="#BE5F71" Offset="0.5"/>
-    <GradientStop Color="#A43D55" Offset="1"/>
+    <GradientStop Color="#88D9838F" Offset="0"/>
+    <GradientStop Color="#88BE5F71" Offset="0.5"/>
+    <GradientStop Color="#88A43D55" Offset="1"/>
   </LinearGradientBrush>
 
   <LinearGradientBrush x:Key="ImageBorderBrushOver" StartPoint="0.5,0" EndPoint="0.5,1">
-    <GradientStop Color="#FEC1CD" Offset="0"/>
-    <GradientStop Color="#E78CA0" Offset="0.5"/>
-    <GradientStop Color="#D15976" Offset="1"/>
+    <GradientStop Color="#88FEC1CD" Offset="0"/>
+    <GradientStop Color="#88E78CA0" Offset="0.5"/>
+    <GradientStop Color="#88D15976" Offset="1"/>
   </LinearGradientBrush>
 
   <LinearGradientBrush x:Key="LevelBackground" StartPoint="0.5,0" EndPoint="0.5,1">
@@ -27,6 +27,16 @@
     <GradientStop Color="#01729D" Offset="1"/>
   </LinearGradientBrush>
 
+  <RadialGradientBrush x:Key="ImageOverlayBrush">
+    <GradientStop Color="#00000000" Offset="0.7"/>
+    <GradientStop Color="#99000000" Offset="1"/>
+  </RadialGradientBrush>
+
+  <LinearGradientBrush x:Key="SelectionBackground" StartPoint="0,0" EndPoint="0,1">
+    <GradientStop Color="#00FFFFFF" Offset="0"/>
+    <GradientStop Color="#66FFFFFF" Offset="1"/>
+  </LinearGradientBrush>
+
   <Style x:Key="ItemImageStyle" TargetType="Image">
     <Setter Property="Stretch" Value="UniformToFill"/>
     <Setter Property="Opacity" Value="0.9"/>
@@ -35,32 +45,51 @@
   <Style x:Key="ImageBorderStyle" TargetType="Border">
     <Setter Property="Width" Value="90"/>
     <Setter Property="Height" Value="90"/>
+    <Setter Property="Margin" Value="10 10 10 0"/>
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="BorderBrush" Value="{StaticResource ImageBorderBrush}"/>
     <Setter Property="BorderThickness" Value="3"/>
   </Style>
 
-  <Style x:Key="LevelBorderStyle" TargetType="Border">
-    <Setter Property="Width" Value="40"/>
-    <Setter Property="Height" Value="20"/>
-    <Setter Property="Background" Value="{StaticResource LevelBackground}"/>
-    <Setter Property="BorderBrush" Value="#213747"/>
-    <Setter Property="BorderThickness" Value="1"/>
-    <Setter Property="Margin" Value="0,25,0,20"/>
+  <Style x:Key="ImageOverlayStyle" TargetType="Border">
+    <Setter Property="Background" Value="{StaticResource ImageOverlayBrush}"/>
   </Style>
 
-  <Style x:Key="LevelInnerBorderStyle" TargetType="Border">
-    <Setter Property="BorderBrush" Value="#0594A8"/>
-    <Setter Property="BorderThickness" Value="1"/>
-    <Setter Property="Padding" Value="1"/>
+  <Style x:Key="LevelBorderStyle" TargetType="Polygon">
+    <Setter Property="Fill" Value="{StaticResource LevelBackground}"/>
+    <Setter Property="Stroke" Value="#213747"/>
+    <Setter Property="StrokeThickness" Value="1"/>
+    <Setter Property="Margin" Value="0,10,0,10"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Width" Value="40"/>
+    <Setter Property="Height" Value="20"/>
+    <Setter Property="Stretch" Value="Uniform"/>
+  </Style>
+
+  <Style x:Key="LevelInnerBorderStyle" TargetType="Polygon">
+    <Setter Property="Stroke" Value="#0594A8"/>
+    <Setter Property="StrokeThickness" Value="1"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="Width" Value="37"/>
+    <Setter Property="Height" Value="17"/>
+    <Setter Property="Stretch" Value="Uniform"/>
   </Style>
 
   <Style x:Key="LevelTextStyle" TargetType="TextBlock">
     <Setter Property="Foreground" Value="#F0E6D2"/>
-    <Setter Property="Margin" Value="0,1,0,0"/>
+    <Setter Property="Margin" Value="1,1,0,0"/>
     <Setter Property="FontWeight" Value="Bold"/>
     <Setter Property="FontSize" Value="14"/>
     <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+    <Setter Property="TextAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="SeparatorStyle" TargetType="Border">
+    <Setter Property="Height" Value="2"/>
+    <Setter Property="Background" Value="{StaticResource LevelBackground}"/>
     <Setter Property="VerticalAlignment" Value="Center"/>
   </Style>
 
@@ -68,50 +97,58 @@
     <Setter Property="Template">
       <Setter.Value>
         <ControlTemplate TargetType="units:RiotStageListBoxItem">
-          <Grid x:Name="LayoutRoot" Background="{TemplateBinding Background}">
+          <Grid x:Name="LayoutRoot">
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
                 <VisualState x:Name="Normal" />
                 <VisualState x:Name="PointerOver">
                   <VisualState.Setters>
                     <Setter Target="ImageBorder.BorderBrush" Value="{StaticResource ImageBorderBrushOver}" />
-                    <Setter Target="LevelBorder.Background" Value="{StaticResource LevelBackgroundOver}" />
-                    <Setter Target="LevelInnerBorder.BorderBrush" Value="#05CEE6" />
+                    <Setter Target="LevelBorder.Fill" Value="{StaticResource LevelBackgroundOver}" />
+                    <Setter Target="LevelInnerBorder.Stroke" Value="#05CEE6" />
                     <Setter Target="ItemImage.Opacity" Value="1" />
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Selected">
                   <VisualState.Setters>
-                    <Setter Target="LayoutRoot.Background" Value="#33FFFFFF" />
+                    <Setter Target="SelectionOverlay.Opacity" Value="1" />
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="PointerOverSelected">
                   <VisualState.Setters>
-                    <Setter Target="LayoutRoot.Background" Value="#33FFFFFF" />
+                    <Setter Target="SelectionOverlay.Opacity" Value="1" />
                     <Setter Target="ImageBorder.BorderBrush" Value="{StaticResource ImageBorderBrushOver}" />
-                    <Setter Target="LevelBorder.Background" Value="{StaticResource LevelBackgroundOver}" />
-                    <Setter Target="LevelInnerBorder.BorderBrush" Value="#05CEE6" />
+                    <Setter Target="LevelBorder.Fill" Value="{StaticResource LevelBackgroundOver}" />
+                    <Setter Target="LevelInnerBorder.Stroke" Value="#05CEE6" />
                     <Setter Target="ItemImage.Opacity" Value="1" />
                   </VisualState.Setters>
                 </VisualState>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
 
-            <Grid Margin="10,5,10,10">
+
+            <Border x:Name="SelectionOverlay" Background="{StaticResource SelectionBackground}" 
+                    Opacity="0" IsHitTestVisible="False"/>
+            <Grid Margin="0,10,0,10">
               <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
               </Grid.RowDefinitions>
 
               <Border x:Name="ImageBorder" Grid.Row="0" Style="{StaticResource ImageBorderStyle}">
-                <Image x:Name="ItemImage" Style="{StaticResource ItemImageStyle}" Source="{Binding Image}"/>
+                <Grid>
+                  <Image x:Name="ItemImage" Style="{StaticResource ItemImageStyle}" Source="{Binding Image}"/>
+                  <Border Style="{StaticResource ImageOverlayStyle}"/>
+                </Grid>
               </Border>
 
-              <Border x:Name="LevelBorder" Grid.Row="1" Style="{StaticResource LevelBorderStyle}">
-                <Border x:Name="LevelInnerBorder" Style="{StaticResource LevelInnerBorderStyle}">
-                  <TextBlock Style="{StaticResource LevelTextStyle}" Text="{Binding Level}"/>
-                </Border>
-              </Border>
+              <Border Grid.Row="1" Style="{StaticResource SeparatorStyle}"/>
+
+              <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <Polygon x:Name="LevelBorder" Style="{StaticResource LevelBorderStyle}" Points="0,9 9.5,0 28.5,0 38,9 28.5,18 9.5,18 0,9"/>
+                <Polygon x:Name="LevelInnerBorder" Style="{StaticResource LevelInnerBorderStyle}" Points="0,9 9.5,0 28.5,0 38,9 28.5,18 9.5,18 0,9"/>
+                <TextBlock Style="{StaticResource LevelTextStyle}" Text="{Binding Level}"/>
+              </Grid>
             </Grid>
           </Grid>
         </ControlTemplate>
