--- a/src/Leagueoflegends.Support/Themes/Units/RiotStageListBoxItem.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotStageListBoxItem.xaml
@@ -87,10 +87,27 @@
     <Setter Property="TextAlignment" Value="Center"/>
   </Style>
 
+  <Style x:Key="LevelGridStyle" TargetType="Grid">
+    <Setter Property="Row" Value="1"/>
+    <Setter Property="HorizontalAlignment" Value="Center"/>
+    <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="SelectionBorderStyle" TargetType="Border">
+    <Setter Property="Background" Value="{StaticResource SelectionBackground}"/>
+    <Setter Property="Opacity" Value="0"/>
+    <Setter Property="IsHitTestVisible" Value="False"/>
+  </Style>
+
   <Style x:Key="SeparatorStyle" TargetType="Border">
+    <Setter Property="Grid.Row" Value="1"/>
     <Setter Property="Height" Value="2"/>
     <Setter Property="Background" Value="{StaticResource LevelBackground}"/>
     <Setter Property="VerticalAlignment" Value="Center"/>
+  </Style>
+
+  <Style x:Key="LayoutStyle" TargetType="Grid">
+    <Setter Property="Margin" Value="0,10,0,10"/>
   </Style>
 
   <Style TargetType="units:RiotStageListBoxItem">
@@ -126,25 +143,23 @@
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
 
-
-            <Border x:Name="SelectionOverlay" Background="{StaticResource SelectionBackground}" 
-                    Opacity="0" IsHitTestVisible="False"/>
-            <Grid Margin="0,10,0,10">
+            <Border x:Name="SelectionOverlay" Style="{StaticResource SelectionBorderStyle}"/>
+            <Grid Style="{StaticResource LayoutStyle}">
               <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
               </Grid.RowDefinitions>
 
-              <Border x:Name="ImageBorder" Grid.Row="0" Style="{StaticResource ImageBorderStyle}">
+              <Border x:Name="ImageBorder" Style="{StaticResource ImageBorderStyle}">
                 <Grid>
                   <Image x:Name="ItemImage" Style="{StaticResource ItemImageStyle}" Source="{Binding Image}"/>
                   <Border Style="{StaticResource ImageOverlayStyle}"/>
                 </Grid>
               </Border>
 
-              <Border Grid.Row="1" Style="{StaticResource SeparatorStyle}"/>
+              <Border Style="{StaticResource SeparatorStyle}"/>
 
-              <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+              <Grid Style="{StaticResource LevelGridStyle}">
                 <Polygon x:Name="LevelBorder" Style="{StaticResource LevelBorderStyle}" Points="0,9 9.5,0 28.5,0 38,9 28.5,18 9.5,18 0,9"/>
                 <Polygon x:Name="LevelInnerBorder" Style="{StaticResource LevelInnerBorderStyle}" Points="0,9 9.5,0 28.5,0 38,9 28.5,18 9.5,18 0,9"/>
                 <TextBlock Style="{StaticResource LevelTextStyle}" Text="{Binding Level}"/>
