--- a/src/Leagueoflegends.Support/Themes/Units/RiotTicketButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotTicketButton.xaml
@@ -2,14 +2,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:units="using:Leagueoflegends.Support.UI.Units">
-  <x:String x:Key="TicketGeometry">M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z</x:String>
+  
+  <x:String x:Key="TicketData">M15.58,16.8L12,14.5L8.42,16.8L9.5,12.68L6.21,10L10.46,9.74L12,5.8L13.54,9.74L17.79,10L14.5,12.68M20,12C20,10.89 20.9,10 22,10V6C22,4.89 21.1,4 20,4H4A2,2 0 0,0 2,6V10C3.11,10 4,10.9 4,12A2,2 0 0,1 2,14V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V14A2,2 0 0,1 20,12Z</x:String>
+
   <LinearGradientBrush x:Key="TicketBorderBrush" StartPoint="0.5, 0" EndPoint="0.5, 1">
     <GradientStop Color="#33BE9F63" Offset="0"/>
     <GradientStop Color="#3383662B" Offset="0.5"/>
     <GradientStop Color="#33664C26" Offset="1"/>
   </LinearGradientBrush>
   <Style x:Key="TicketIconPathStyle" TargetType="Path">
-    <Setter Property="Data" Value="{StaticResource TicketGeometry}"/>
+    <Setter Property="Data" Value="{StaticResource TicketData}"/>
     <Setter Property="Fill" Value="#CCD0A756"/>
     <Setter Property="Width" Value="14"/>
     <Setter Property="Height" Value="14"/>
