--- a/src/Leagueoflegends.Tft/Themes/Views/TftContent.xaml
+++ b/src/Leagueoflegends.Tft/Themes/Views/TftContent.xaml
@@ -83,9 +83,16 @@
 
   <Style x:Key="LevelControlStyle" TargetType="units:RiotLevelControl">
     <Setter Property="Level" Value="6"/>
-    <Setter Property="CurrentXP" Value="0"/>
-    <Setter Property="MaxXP" Value="100"/>
+    <Setter Property="CurrentXP" Value="310"/>
+    <Setter Property="MaxXP" Value="500"/>
     <Setter Property="Margin" Value="0 40 0 0"/>
+  </Style>
+
+  <Style x:Key="LockedButtonStyle" TargetType="units:RiotButton">
+    <Setter Property="IsLocked" Value="True"/>
+    <Setter Property="HorizontalAlignment" Value="Left"/>
+    <Setter Property="Margin" Value="0 10 0 0"/>
+    <Setter Property="Width" Value="100"/>
   </Style>
 
   <Style x:Key="LeftStackStyle" TargetType="StackPanel">
@@ -95,7 +102,7 @@
 
   <Style x:Key="RightStackStyle" TargetType="StackPanel">
     <Setter Property="HorizontalAlignment" Value="Right"/>
-    <Setter Property="Margin" Value="30 30 0 30"/>
+    <Setter Property="Margin" Value="30 10 0 30"/>
   </Style>
 
 
@@ -130,9 +137,25 @@
                   <units:RiotCapsuleButton Content="TFT Missions"/>
                   <units:RiotStarButton Content="214"/>
                 </StackPanel>
+                <units:RiotPremiumButton Content="PREMIUM"/>
+                <units:RiotLevelInfoControl Margin="0 10 20 0"
+                  Title="{Binding Current.Name}"
+                  Level="{Binding Current.Level}"
+                  Description="{Binding Current.Explain}"/>
+                <units:RiotButton Style="{StaticResource LockedButtonStyle}"/>
               </StackPanel>
 
-              <units:RiotStageListBox Style="{StaticResource StageListBoxStyle}" ItemsSource="{Binding TeamFights}"/>
+              <Border Margin="0 60 0 0" Width="200" HorizontalAlignment="Center" VerticalAlignment="Top"
+                      BorderThickness="1"
+                      BorderBrush="#CC000000">
+                <Image Source="{Binding Current.Image}"
+                     Stretch="Uniform"/>
+              </Border>
+
+              <units:RiotStageListBox
+                Style="{StaticResource StageListBoxStyle}"
+                ItemsSource="{Binding TeamFights}"
+                SelectedItem="{Binding Current, Mode=TwoWay}"/>
 
               <Border Style="{StaticResource BottomBorderStyle}">
                 <Grid>
