--- a/src/Leagueoflegends.Store/Themes/Views/StoreChampionsContent.xaml
+++ b/src/Leagueoflegends.Store/Themes/Views/StoreChampionsContent.xaml
@@ -14,18 +14,8 @@
               <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Margin="20 60 0 0">
-              <units:RiotChampSummary HorizontalAlignment="Center"/>
-              <units:RiotTextBox Margin="0 20 0 0"/>
-              <units:RiotCheckBox Content="View Unowned Items"/>
-              <units:RiotComboBox 
-                ItemsSource="{Binding FilterOptions}"
-                SelectedItem="{Binding SelectedFilterOption, Mode=TwoWay}"
-                DisplayMemberPath="Name"/>
-              <units:RiotComboBox
-                Margin="0  10 0 0"
-                ItemsSource="{Binding SortOptions}"
-                SelectedItem="{Binding SelectedSortOption, Mode=TwoWay}"
-                DisplayMemberPath="Name"/>
+              <units:RiotStoreChampSummary/>
+              
             </StackPanel>
             <units:RiotChampListBox
               Grid.Column="1"
